--- a/src/components/nav-items/login/Register.css
+++ b/src/components/nav-items/login/Register.css
@@ -1,3 +1,18 @@
 .register-title {
    font-size: 1vw;
 }
+
+.success-register {
+    color: rgb(34, 202, 34);
+    font-size: 1.5vw;
+  /* margin-bottom: -1vw; */
+}
+
+@media only screen and (max-width: 768px) {
+    .register-title {
+        font-size: 14px;
+    }
+    .success-register {
+        font-size: 14px;
+    }
+}
